loki-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loki
  serviceName: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - args:
        - -config.file=/etc/loki/loki.yaml
        name: loki
        image: grafana/loki:2.0.0
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 3100
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/loki
          name: config
        - mountPath: /var/vcap/data/loki
          name: loki-storage
        # - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        #   name: loki-token-q8thq
          # readOnly: true
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccount: loki-sa
      volumes:
      - name: config
        secret:
          defaultMode: 420
          secretName: loki
      - name: loki-storage
        emptyDir: {}

      # - emptyDir: {}
      #   name: storage
      # - name: loki-token-q8thq
        # secret:
        #   defaultMode: 420
        #   secretName: loki-token-q8thq
