pinger-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinger
  labels:
    app: pinger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinger
  template:
    metadata:
      labels:
        app: pinger
    spec:
      containers:
      - name: pinger
        image: bukecious/pinger-app:latest
        ports:
        - containerPort: 8080
