ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  tls:
    - hosts:
      - grafana-apps-test-cluster.k9s.a9s-ops.de
  rules:
  - host: grafana-apps-test-cluster.k9s.a9s-ops.de
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: loki-apps-test-cluster.k9s.a9s-ops.de
    http:
      paths:
      - path: /
        backend:
          serviceName: loki
          servicePort: 3100
